sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:22: error: not found: value swapped
   	 } while(swapped==true)
                 ^